--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
 .flex-container {
   display: inline-flex;
   flex-direction: row;
+  border: 3px solid #ffcc00;
+  width: 33%;
+  height: 30em;
+  flex-wrap:wrap;
+  
 }
 
 .flex-item {
@@ -38,6 +43,25 @@ body {
 }
 
 .flex-item:nth-child(3) {
+  background-color: purple;
+}
+.flex-item:nth-child(4) {
+  background-color: #A62E5C;
+}
+
+.flex-item:nth-child(5) {
+  background-color: #9BC850;
+}
+
+.flex-item:nth-child(6) {
+  background-color: purple;
+}
+
+.flex-item:nth-child(7) {
+  background-color: #9BC850;
+}
+
+.flex-item:nth-child(8) {
   background-color: purple;
 }
 
